# gpureports

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BACKFILL_CLASSIFICATION_FIX.md  Dockerfile  Dockerfile.dashboard  OPERATIONS.md  PERFORMANCE_ANALYSIS.md  PHASE3_OPTIMIZATION_RESULTS.md  README.md  REPOSITORY_CLEANUP_PROPOSAL.md  TEST_FIXES.md  TEST_README.md  TEST_STATUS.md  _emailer.sh  analyze.py  analyze_pool_health.py  check_unused_gpus.py  collector.py  device_name_mappings.py  draining_report.py  emailer.sh  figures.py  get_gpu_state.py  get_gpu_state_polars.py  get_job_pressure.py  gpu_playground.py  gpu_timeline_heatmap.py  gpu_utils.py  gpu_utils_polars.py  hosted_capacity  justfile  masked_hosts.yaml  methodology.md  migrate_job_pressure.py  open_cap_user_jobs.py  plot_wait_time_trend.py  pyproject.toml  report.py  run_tests.py  (+9 more)
.devcontainer/: devcontainer.json
analysis/: analyze_task7_troubleshoot.py  benchmark_duckdb_vs_sqlite.py
archive/: README.md
backlog/: config.yml
dashboard/: README.md  data.py  server.py
debug/: debug_backfill_only.py  debug_h200_detailed.py  debug_h200_priority.py  debug_priority_filter.py
memory/: feedback_dont_ask.md
scripts/: README.md  README_POLARS_TOOLS.md  analyze_evictions.py  benchmark_polars.py  concurrency_checks.py  figures.py  gap_analysis.py  gpu_playground.py  healthcheck.py  host_report.py  investigate_backfill_usage.py  migrate_sqlite_to_parquet.py  plot_example.py  plot_gpu_availability.py  plot_usage_stats.py  plot_wait_times.py  profile_memory.py  query.py  weekly_allocation_plot.py  weekly_summary.py
templates/: gpu_report.html
tests/: test_gpu_utils.py  test_parquet_storage.py  test_plot_usage_stats.py  test_usage_stats.py
website_generator/: Dockerfile  (+4 more)
(+93 files in other folders)
