[project]
name = "gpureports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "typer>=0.16.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.7.0",
    "PyYAML>=6.0.0",
    "elasticsearch>=9.0.2",
    "seaborn>=0.13.2",
]
