[project]
name = "gpureports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "polars>=0.20.0",
    "typer>=0.16.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.7.0",
    "PyYAML>=6.0.0",
    "elasticsearch>=9.0.2",
    "seaborn>=0.13.2",
    "pytest>=9.0.1",
    "pre-commit>=4.4.0",
    "ruff>=0.8.0",
    "psutil>=5.9.0",
    "pyarrow>=22.0.0",
    "connectorx>=0.4.4",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "archive",
    ".venv",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
